"""cpptrace"""

module(
    name = "cpptrace",
    version = "1.0.4",
    compatibility_level = 1,
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "libdwarf", version = "0.12.0.bcr.1")
bazel_dep(name = "libunwind", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.1", dev_dependency = True)
